--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
+    "react-native-webview": "11.15.0",
+    "react-native-youtube-iframe": "^2.2.2",
     "styled-components": "^5.3.3",
     "zustand": "^3.7.1"
   },
